# ghosthound

./: .gitignore  README.md  main.py  pyproject.toml
ghosthound/: __init__.py
ghosthound/analyzers/: __init__.py  asrep.py  base.py  delegation.py  domain_admin.py  kerberoastable.py
ghosthound/models/: __init__.py  core.py
ghosthound/parsers/: __init__.py  bloodhound.py
