[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosthound"
version = "0.1.0"
description = "Lightweight Active Directory Attack Surface Analyzer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3 "}
authors = [
    {name = "GhostHound Contributors"}
]

[project.scripts]
ghosthound = "main:main"

[tool.setuptools]
packages = ["ghosthound", "ghosthound.models", "ghosthound.parsers"]

[tool.setuptools.package-data]
